force-app/main/default/objects/FEC_Sensitive_Data__c/FEC_Sensitive_Data__c.object-meta.xml
<CustomObject>
    <description>Lịch sử từng lần xem dữ liệu nhạy cảm của các User trên CSM (Click vào biểu tượng eye icon)</description>
    <label>Sensitive Data</label>
    <nameField>
        <label>Sensitive Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensitive Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>