force-app/main/default/objects/FEC_Sensitive_Data__c/fields/FEC_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_ID__c</fullName>
    <description>Case ID sẽ hiển thị dạng. hyperlink, khi click vào sẽ hiển thị Case Review</description>
    <formula>FEC_Related_Case__r.FEC_Link_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>