force-app/main/default/objects/FEC_Sensitive_Data__c/fields/FEC_Related_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Related_Case__c</fullName>
    <description>Hiển lookup đến Case/Interaction liên quan</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sensitive Data</relationshipLabel>
    <relationshipName>Sensitive_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>