force-app/main/default/objects/FEC_Sensitive_Data__c/fields/FEC_Section__c.field-meta.xml
<CustomField>
    <fullName>FEC_Section__c</fullName>
    <description>Hiển thị tên section mà tại đó User chọn xem đầy đủ sensitive data (click eye icon)</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>