force-app/main/default/objects/FEC_Sensitive_Data__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Hệ thống ghi nhận &lt;Email ID&gt; của User xem dữ liệu</description>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>