force-app/main/default/objects/FEC_Sensitive_Data__c/fields/FEC_User_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Role__c</fullName>
    <description>Role của User xem data tại thời điểm xem
(không dùng đc formula vì khi User đổi role thì không đc cập nhật mà chỉ ghi nhận tại thời điểm xem dữ liệu)</description>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>